# Valhalla-a-Four-player-chess-engine

./: .gitignore  CLAUDE.md  CLAUDE_MYTHOS.md  Cargo.toml  LICENSE  README.md
masterplan/: 4PC_RULES_REFERENCE.md  AGENT_CONDUCT.md  AGENT_CONDUCT_MYTHOS.md  DECISIONS.md  HANDOFF.md  MASTERPLAN.md  STATUS.md  test_comms.txt
masterplan/_index/: MOC-Active-Issues.md  MOC-Project-Valhalla.md  MOC-Sessions.md  Wikilink-Registry.md
masterplan/_templates/: component.md  issue.md  session.md
valhalla-engine/: Cargo.toml
valhalla-engine/src/: lib.rs  main.rs
valhalla-engine/src/board/: display.rs  mod.rs  repr.rs  setup.rs
valhalla-engine/src/dkw/: mod.rs  rules.rs
valhalla-engine/src/eval/: bootstrap.rs  king_safety.rs  material.rs  mod.rs  pawn_structure.rs  pst.rs
valhalla-engine/src/game_state/: fen4.rs  make_unmake.rs  mod.rs  state.rs
valhalla-engine/src/influence/: compute.rs  mod.rs
valhalla-engine/src/movegen/: attack.rs  castling.rs  legal.rs  mod.rs  pawns.rs  perft.rs  pieces.rs
valhalla-engine/src/observer/: mod.rs  self_play.rs
valhalla-engine/src/protocol/: logfile.rs  mod.rs
valhalla-engine/src/search/: history.rs  killer.rs  mod.rs  move_order.rs  opps.rs
valhalla-engine/src/swarm/: aggregation.rs  chain_participation.rs  chain_walk.rs  commitment.rs  force_ratio.rs  mod.rs  pile_on.rs  swarm_delta.rs
valhalla-engine/src/tt/: mod.rs  table.rs
valhalla-engine/src/types/: board_move.rs  constants.rs  mod.rs  piece.rs  player.rs  score.rs  square.rs
valhalla-engine/src/zobrist/: hash.rs  keys.rs  mod.rs
(+32 files in other folders)
